# comfy-sparse-attn

./: .gitignore  README.md  pyproject.toml
src/comfy_attn/: __init__.py  detect.py  dispatch.py  varlen.py
src/comfy_sparse_attn/: __init__.py  _links.py  attention_sparse.py  detect.py  ops_sparse.py  sparse.py  varlen.py
