[project]
name = "comfy-attn"
version = "0.1.0"
description = "Attention dispatch for ComfyUI custom nodes - GPU-aware auto-detection with ComfyUI-native backends"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Andrea Pozzetti"}
]
keywords = ["comfyui", "attention", "sdpa", "flash-attention", "sage-attention", "gpu"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/PozzettiAndrea/comfy-attn"
Repository = "https://github.com/PozzettiAndrea/comfy-attn"
Issues = "https://github.com/PozzettiAndrea/comfy-attn/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/comfy_attn"]

[tool.ruff]
line-length = 100
target-version = "py310"
