[project]
name = "comfy-sparse-attn"
version = "0.0.1"
description = "Sparse / variable-length attention dispatch for ComfyUI custom nodes"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Andrea Pozzetti"}
]
keywords = ["comfyui", "attention", "sparse", "varlen", "flash-attention", "sage-attention", "sdpa"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/PozzettiAndrea/comfy-sparse-attn"
Repository = "https://github.com/PozzettiAndrea/comfy-sparse-attn"
Issues = "https://github.com/PozzettiAndrea/comfy-sparse-attn/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/comfy_sparse_attn"]

[tool.ruff]
line-length = 100
target-version = "py310"
